--- a/packages/father/package.json
+++ b/packages/father/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kkb/npmbase",
+  "name": "@kkb/npmbase-fether",
   "version": "0.0.1",
   "description": "",
   "publishConfig": {
@@ -105,6 +105,7 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "react-router-dom": "5.2.0",
+    "rollup-plugin-url": "^3.0.1",
     "typescript": "4.2.3",
     "vcm-cli": "^1.0.5"
   }
